VNC: fix intent for KeX/VNC